fix: progress message wasn't aligned, remove unnecesary flag and instead validate the actual progress value

--- a/src/app/modules/onboarding/components/onboarding-wrapper/onboarding-wrapper.component.scss
+++ b/src/app/modules/onboarding/components/onboarding-wrapper/onboarding-wrapper.component.scss
@@ -41,3 +41,7 @@
     height: 150px;
   }
 }
+
+.progress-description {
+  text-align: center;
+}
